--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jonathan-mcnamara.github.io/robofriends-gh-pages",
+  "homepage": "https://jonathan-mcnamara.github.io/robofriends",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
