--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "32x32"
+      "sizes": "32x32",
+      "type": "image/x-icon"
     },
     {
       "src": "android-chrome-192x192.png",
